--- a/app/globals.css
+++ b/app/globals.css
@@ -29,6 +29,10 @@
 	}
 }
 
+.animate-fog {
+	background-size: 1000px 1000px; /* dopasuj do tekstury */
+	animation: fog-move 40s linear infinite;
+}
 body {
 	background: var(--background);
 	color: var(--foreground);
